# static_fire

./: CMakeLists.txt  README.md
config/: ws_server.conf.example  ws_server.service.example
include/app/: config.h  context.h
include/can/: can_bus.h
include/control/: command.h  firing_sequence.h  state.h  wiggle.h
include/util/: heartbeat.h  logger.h
include/ws/: ws_bridge.h
src/: main.c
src/app/: config.c  context.c
src/can/: can_bus.c
src/control/: command.c  firing_sequence.c  state.c  wiggle.c
src/util/: heartbeat.c  logger.c
src/ws/: ws_bridge.c
